--- a/src/main/java/ConfirmacaoAdicaoProduto.form
+++ b/src/main/java/ConfirmacaoAdicaoProduto.form
@@ -47,7 +47,7 @@
           <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Produto - Adicionar"/>
+          <text value="Label"/>
         </properties>
       </component>
       <component id="e90a8" class="javax.swing.JLabel" binding="produtoLabel">
